kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  #namespace: webapp-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp-container
          image: harbor.app.jordantech-solutions.net/projectx/webapp:alpine3.8
          ports:
            - containerPort: 80
